# dioxus-template

./: Cargo.toml  README.md  cargo-generate.toml  common.rhai  init-common.rhai  init-script.rhai
.github/workflows/: main.yml
Bare-Bones/: Cargo.toml  Dioxus.toml  README.md  cargo-generate.toml  conditional-files.rhai  init.rhai
Bare-Bones/assets/: main.css
Bare-Bones/src/: main.rs
Barebones/: README.md  conditional-files.rhai
Barebones/assets/: main.css
Barebones/src/: main.rs
Desktop/src/: main.rs
Fullstack/src/: main.rs
Jumpstart/: .gitignore  Cargo.toml  Dioxus.toml  README.md  cargo-generate.toml  conditional-files.rhai  init.rhai
Jumpstart/assets/styling/: main.css
Jumpstart/src/: main.rs
Jumpstart/src/components/: calculator.rs  echo.rs  mod.rs  navbar.rs
Jumpstart/src/pages/: home.rs
Jumpstart/src/views/: blog.rs  home.rs  navbar.rs
Liveview/src/: main.rs
TUI/src/: main.rs
Web/src/: main.rs
Workspace/: Cargo.toml  README.md  cargo-generate.toml  conditional-files.rhai  init.rhai  vars.rhai
Workspace/desktop/: Cargo.toml  README.md
Workspace/desktop/src/: main.rs
Workspace/desktop/src/views/: blog.rs  home.rs  mod.rs
Workspace/mobile/: Cargo.toml  README.md
Workspace/mobile/src/: main.rs
Workspace/mobile/src/views/: home.rs
Workspace/server/: Cargo.toml  README.md
Workspace/server/src/: lib.rs
Workspace/ui/: Cargo.toml  README.md
Workspace/ui/assets/styling/: hero.css
Workspace/ui/src/: calculator.rs  echo.rs  hero.rs  lib.rs  navbar.rs
Workspace/web/: Cargo.toml  README.md
Workspace/web/src/: main.rs
Workspace/web/src/views/: blog.rs
src/: main.rs
