[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { {{ dioxus_dep_src }}, features = {{dioxus_dep_features}} }
dioxus-logger = "0.5"

[features]
default = ["{{default_platform}}"]
{%- for feature in features %}
{{ feature }}
{%- endfor %}