[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { {{ dioxus_dep_src }}, features = {{dioxus_dep_features}} }

[features]
default = [{% if is_fullstack == false -%}"{{default_platform}}"{%- endif %}]
{%- for feature in features %}
{{ feature }}
{%- endfor %}
