[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { {{ dioxus_dep_src }}, features = {{dioxus_dep_features}} }

[features]
default = ["{{default_platform}}"]
{%- for feature in features %}
# The feature that are only required for the {{feature}} build target should be optional and only enabled in the {{feature}} feature
{{ feature }}
{%- endfor %}
