[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = [{{- router_feature -}}] }
dioxus-logger = { workspace = true }
ui = { workspace = true }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
{% if is_fullstack -%}
server = ["dioxus/server"]
{%- endif %}