[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = [{{- router_feature -}}] }
ui = { workspace = true }

[features]
default = [{% if is_fullstack == false -%}"desktop"{%- endif %}]
desktop = ["dioxus/desktop"]
{% if is_fullstack -%}
server = ["dioxus/server"]
{%- endif %}
