[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = [{{- router_feature -}}] }
ui = { workspace = true }

[features]
default = [{% if is_fullstack == false -%}"mobile"{%- endif %}]
# The web feature is enabled by the CLI when building the client (mobile) build{% if is_fullstack -%}
# Any web specific dependencies should be optional and only enabled in the mobile feature (for example, tokio should be added here){%- endif %}
mobile = ["dioxus/mobile"]
{% if is_fullstack -%}
server = ["dioxus/server", "ui/server"]
{%- endif %}
