[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = [{{- router_feature -}}] }
ui = { workspace = true }

[features]
default = [{% if is_fullstack == false -%}"web"{%- endif %}]
# The web feature is enabled by the CLI when building the client (web) build{% if is_fullstack -%}
# Any web specific dependencies should be optional and only enabled in the web feature (for example, web-sys should be added here){%- endif %}
web = ["dioxus/web"]
{% if is_fullstack -%}
server = ["dioxus/server", "ui/server"]
{%- endif %}
